--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,4 @@
-FROM ubuntu:14.04
-RUN apt-get update
-RUN apt-get -y install openjdk-7-jre-headless
+FROM samyjanrain/java7
 ADD target/universal/stage /opt/app
 EXPOSE 8000
 ENTRYPOINT ["/opt/app/bin/example-service"]
